--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,7 +31,7 @@
 
     <!-- 2 column grid layout for inline styling -->
     <div class="row mb-4">
-      <div class="col d-flex justify-content-center">
+      <div class="col">
         <!-- Checkbox -->
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="form2Example31" unchecked />
@@ -41,12 +41,14 @@
   
     </div>
 
-    <div *ngIf="isLoginFailed==true">
-      <p>Invalid username and password Please try again</p>
-    </div>
+
+  
   
     <!-- Submit button -->
-    <div class="text-center">
+    <div class="text-center"> 
+       <div *ngIf="isLoginFailed==true" class="alert alert-danger" role="alert" >
+      <p >Invalid username and password Please try again</p>
+    </div>
       <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
     </div> 
    </div>
