--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-login></app-login>
+
+    <!-- <nav *ngIf="isLoggedIn()">
+      <app-sidebar></app-sidebar>
+  </nav> -->
+    <router-outlet></router-outlet>
+ 
+  
