--- a/src/app/asset/asset-table/asset-table.component.html
+++ b/src/app/asset/asset-table/asset-table.component.html
@@ -1,7 +1,7 @@
 
 <div class="card">
     <h4 class="card-header" >
-        Master list&nbsp;<span class="badge badge-primary">{{ rows.length }}</span>
+        Asset List&nbsp;<span class="badge badge-primary">{{ rows.length }}</span>
       <!-- <button class="float-sm-right btn btn-primary" (click)="openAddUserModal()"><i class="ion ion-md-add"></i>&nbsp;<b>Add New User</b></button> -->
       <!-- <div class="float-sm-right" style="padding-right: 10px">
         <input [(ngModel)]="filterkey" class="form-control" type='text' placeholder='Filter by ...' (keyup)='updateFilter($event)'>
@@ -22,15 +22,14 @@
         [limit]="10"
         (activate)="onActivate($event)"
         >
-        <ngx-datatable-column name="Entry id"  prop="Entry_id"></ngx-datatable-column>
-        <ngx-datatable-column name="Asset number"  prop="Asset_no"></ngx-datatable-column>
-        <ngx-datatable-column name="Asset description"  prop="Asset_desc"></ngx-datatable-column>
-        <ngx-datatable-column name="Taken by" prop="Taken_by"></ngx-datatable-column>
-        <ngx-datatable-column name="Date taken" prop="Date_taken"></ngx-datatable-column>
-        <ngx-datatable-column name="Return by" prop="Return_by"></ngx-datatable-column>
-        <ngx-datatable-column name="Date return" prop="Date_return"></ngx-datatable-column>
-        <ngx-datatable-column name="Remarks" prop="Remarks"></ngx-datatable-column>
-        <ngx-datatable-column name="Category" [maxWidth]="200" prop="Category"></ngx-datatable-column>
+        <ngx-datatable-column name="Asset Number"  prop="Asset_no"></ngx-datatable-column>
+        <ngx-datatable-column name="Asset Description"  prop="Asset_desc"></ngx-datatable-column>
+        <ngx-datatable-column name="Category" prop="Category"></ngx-datatable-column>
+        <ngx-datatable-column name="Location" prop="Location"></ngx-datatable-column>
+        <ngx-datatable-column name="Company Name" prop="Company_name"></ngx-datatable-column>
+        <ngx-datatable-column name="Calibration Start" prop="CalibDate_start"></ngx-datatable-column>
+        <ngx-datatable-column name="Calibration Ends" prop="CalibDate_end"></ngx-datatable-column>
+        <!-- <ngx-datatable-column name="Category" [maxWidth]="200" prop="Category"></ngx-datatable-column> -->
         
       </ngx-datatable>
     </div>
