--- a/src/app/asset/asset.component.html
+++ b/src/app/asset/asset.component.html
@@ -2,4 +2,5 @@
 <h4 class="font-weight-bold py-3 mb-4">
     <i class="ion ion-md-contacts"></i>&nbsp;&nbsp;<span >Asset List</span>
   </h4>
-  <hr class="border-light container-m--x mt-0 mb-4">
+  <hr><br>
+<app-asset-list></app-asset-list>
