--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,8 @@
 <!-- Page Header -->
-<h4 class="font-weight-bold py-3 mb-4">
+<h2 class="font-weight-bold py-3 mb-4">
     <i class="ion ion-md-contacts"></i>&nbsp;&nbsp;<span >Dashboard</span>
-  </h4>
-  <hr class="border-light container-m--x mt-0 mb-4">
+  </h2>
+  <hr>
+  <app-card></app-card>
+<br>
+<app-chart></app-chart> 
