--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -6,7 +6,7 @@ body {
   padding-left: 240px;
   }
   }
-  
+  // @import '~@swimlane/ngx-datatable/assets/app.css';
   /* Sidebar */
   .sidebar {
   position: fixed;
