--- a/src/app/user/modify-user-modal/modify-user-modal.component.html
+++ b/src/app/user/modify-user-modal/modify-user-modal.component.html
@@ -15,7 +15,7 @@
     <div class="form-group row">
       <label for="staticEmail" class="col-sm-2 col-form-label">ID: </label>
       <div class="col-sm-2">
-        <input type="text" readonly class="form-control-plaintext" [class.is-valid] id="staticEmail" formControlName="id" >
+        <input type="text" readonly class="form-control-plaintext" [class.is-valid] id="staticEmail" disabled formControlName="id" >
       </div>
     </div>
 
