--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,13 +1,26 @@
 
-  <div class="card">
-    <h4 class="card-header" >
+  <div class="card ">
+    <div class="card-header " >
+    <h4>
         Users&nbsp;<span class="badge badge-primary">{{ rows.length }}</span>
-        <button class="float-sm-right btn btn-success btn-sm" (click)="openAddUserModal()"><i class="ion ion-md-add"></i>&nbsp;<b>+ Add New User</b></button>
+        <button style=" padding:8px;margin:15px auto;" class="float-sm-right btn btn-success btn-sm" (click)="openAddUserModal()"><i class="ion ion-md-add"></i>&nbsp;<b>+ Add New User</b></button>
+       <input
+          class = "float-sm-right form-control form-control-sm"
+          type="text"
+          style=" padding:8px;margin:15px auto;width:20%;"
+          placeholder="Search by first name..."
+          (keyup)="updateFilter($event)"
+        />
+</h4>
+</div>
       <!-- <button class="float-sm-right btn btn-primary" (click)="openAddUserModal()"><i class="ion ion-md-add"></i>&nbsp;<b>Add New User</b></button> -->
       <!-- <div class="float-sm-right" style="padding-right: 10px">
         <input [(ngModel)]="filterkey" class="form-control" type='text' placeholder='Filter by ...' (keyup)='updateFilter($event)'>
-      </div> -->
-    </h4>
+      </div> <div class="mb-3"  class="form-control form-control-sm">
+    </div>-->
+      
+    
+    
     <div class="card-ngx-datatable table-responsive">
       <ngx-datatable #table style="min-width: 550px"
         class="material striped"
@@ -18,7 +31,7 @@
         [footerHeight]="'auto'"
         [rowHeight]="'auto'"
         [reorderable]="false"
-        [limit]="20"
+        [limit]="10"
         (activate)="onActivate($event)"
         >
         <ngx-datatable-column name="Id"  prop="id"></ngx-datatable-column>
