--- a/src/app/master/master-list/master-list.component.html
+++ b/src/app/master/master-list/master-list.component.html
@@ -114,4 +114,5 @@
 <hr>
 <br>
 
-<app-master-table></app-master-table>
+<app-master-datatable></app-master-datatable>
+<!-- <app-master-table></app-master-table> -->
